Implement category route

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -5,28 +5,49 @@
     {% if categories %}
     <ul>
     {% for cat in categories %}
-    <li>{{cat.name}}</li>
+    <li><a href="{{url_for('category', category=cat.name)}}">{{cat.name}}</a></li>
     {% endfor %}
     </ul>
     {% endif %}
   </div>
-  <div class="item-list col-md-8">
+  <div class="latest-items col-md-8">
     <h2>Latest Items</h2>
     {% if items %}
     <ul>
     {% for item in items %}
     <li>
       <div class="item">
-          {{item.name}}
+          <a href='#'>{{item.name}}</a>
+        <!--
+          If this template has been loaded from the 'catalog' route,
+          then the latest items should be displayed, rather than Items
+          specific to a category. In this case, the name of the category
+          the item is within should be displayed beside the item name in
+          parentheses.
+        -->
+          {% if not category %}
           {% for cat in categories %}
           {% if cat.id == item.category_id %}
           <em>({{cat.name}})</em>
           {%endif%}
           {%endfor%}
+          {% endif %}
       </div>
     </li>
     {% endfor %}
     </ul>
+    {% else %}
+    <!--
+      Feedback in case there no items in the selected category,
+      or there are no items at all.
+    -->
+    <div class="no-items">
+      {%if category %}
+      <span>No items in this category</span>
+      {%else%}
+      <span>No items yet</span>
+      {%endif%}
+    </div>
     {% endif %}
   </div>
 </div>
