--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md app-name">
-            <h1>Catalog App</h1>
+            <h1><a href="{{url_for('catalog')}}">Catalog App</a></h1>
         </div>
         <div class="login-btn col-md text-right">
           <button class="btn btn-primary" type="button" name="button">Login</button>
