--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,9 @@
 
 </div>
-
+<footer class="container">
+  <div class="text-center">
+    Udacity Full Stack Web Developer Nanodegree, 2018
+  </div>
+</footer>
 </body>
 </html>
