--- a/templates/item.html
+++ b/templates/item.html
@@ -5,7 +5,7 @@
 -->
 {% if item %}
 <div class="item-details">
-  <h2>{{item.name}}</h2>
+  <h2>{{item.name | capitalize}}</h2>
   <div class="item-description">
     {{item.description}}
   </div>
