Implement item edition

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,10 @@ ul{
   font-size: 1.2em;
 }
 
+
+.edit-item label,
+.edit-item input,
+.edit-item textarea,
 .add-item label,
 .add-item input,
 .add-item textarea{
