--- a/templates/item.html
+++ b/templates/item.html
@@ -2,7 +2,7 @@
 {#
   Consider that it is possible that the user types the URL for
   the specific item, but it may be no longer available.
-#}   
+#}
 {% if item %}
 <div class="item-details">
   <h2>{{item.name | capitalize}}</h2>
@@ -14,4 +14,9 @@
 <div class="no-item">
   The item for this page was not found.
 </div>
-{% endif %} {% include 'footer.html' %}
+{% endif %}
+<div class="edit-delete">
+  <a href="{{url_for('edit_item', item=item.name)}}">Edit |</a>
+  <a href="#"> Delete</a>
+</div>
+{% include 'footer.html' %}
