--- a/templates/item.html
+++ b/templates/item.html
@@ -17,6 +17,6 @@
 {% endif %}
 <div class="edit-delete">
   <a href="{{url_for('edit_item', item=item.name)}}">Edit |</a>
-  <a href="#"> Delete</a>
+  <a href="{{url_for('delete_item', item=item.name)}}"> Delete</a>
 </div>
 {% include 'footer.html' %}
