--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,7 +1,7 @@
 {% include 'header.html' %}
 <div class="edit-item">
   <h2>Edit Item</h2>
-  <form class="new-item-form" action="{{url_for('edit_item', item=item)}}" method="post">
+  <form class="new-item-form" action="{{url_for('edit_item', item=item.name)}}" method="post">
     <input type="hidden" name="id" value="{{item.id}}">
     <div class="name-input">
       <label for="name">Title: </label>
