--- a/templates/header.html
+++ b/templates/header.html
@@ -28,18 +28,27 @@
     <div class="container">
       <div class="row">
         <div class="col-md app-name">
-            <h1><a href="{{url_for('catalog')}}">Catalog App</a></h1>
+          <h1><a href="{{url_for('catalog')}}">Catalog App</a></h1>
         </div>
         {% if not isLoginPage %}
         <div class="login-btn col-md text-right">
           {% if isLoggedIn %}
-          <a href="{{url_for('logout')}}" class="btn btn-info" name="button">Logout</a>
-          {% else %}
-          <a href="{{url_for('showLogin')}}" class="btn btn-primary" name="button">Login</a>
-          {% endif %}
+          <a href="{{url_for('logout')}}" class="btn btn-info" name="button">Logout</a> {% else %}
+          <a href="{{url_for('showLogin')}}" class="btn btn-primary" name="button">Login</a> {% endif %}
         </div>
         {% endif %}
       </div>
     </div>
   </header>
   <div class="container content">
+    <div class='flash'>
+      {% with messages = get_flashed_messages() %} {% if messages %}
+
+      <ul>
+        {% for message in messages %}
+        <li> <strong> {{ message }} </strong> </li>
+        {% endfor %}
+      </ul>
+      {% endif %} {% endwith %}
+
+    </div>
