Adjust lines length in app.py file

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
 
   <!--END GOOGLE PLUS SIGN IN BUTTON -->
 
-  <div id="result" class="text-center"></div>
+  <div id="result" class="text-center login-feedback"></div>
 
   <script>
     function signInCallback(authResult) {
