--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,15 @@
 
 </div>
 <footer class="container">
-  <div class="text-center">
-    Udacity Full Stack Web Developer Nanodegree, 2018
+  <div class="row">
+    <div class="col-md-1">
+      <a href="{{url_for('showHelp')}}">Help</a>
+    </div>
+    <div class="text-center col-md">
+      Udacity Full Stack Web Developer Nanodegree, 2018
+    </div>
+    <div class="col-md-1">
+    </div>
   </div>
 </footer>
 </body>
