--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
   <link rel='stylesheet' href="{{url_for('static', filename='css/bootstrap.min.css')}}">
   <link rel='stylesheet' href="{{url_for('static', filename='css/bootstrap-grid.min.css')}}">
   <link rel='stylesheet' href="{{url_for('static', filename='css/bootstrap-reboot.min.css')}}">
-  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
   <!-- <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
   <script src="{{url_for('static', filename='js/bootstrap.bundle.min.js')}}"></script> -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -45,6 +45,7 @@
     </div>
   </header>
   <div class="container content">
+
     <div class='flash'>
       {% with messages = get_flashed_messages() %} {% if messages %}
 
